Add entity field updater interface (#7)
* Add entity field updater interface

* Use generic types

* Fix generics